feat(release): update f3c1916
